Camlp5 Version 5.01:
---------------------

* [06 Oct 07] Fixed bug in grammars: there was a parsing confusion with
  entries with qualified names with same final identifier, resulting
  bad results. Example: (qualified names "Prim.ident" and "Constr.ident"
  have the same final identifier "ident").
    EXTEND
      Prim.ident: [ [ ... ] ];
      Constr.ident: [ [ ... ] ];
    END;
* [05 Oct 07] In Scheme syntax (pa_scheme.cmo), added "type*" (symmetric
  to "define*") and "exceptionrebind".
* [04 Oct 07] Added flag C in pr_r.cmo and pr_o.cmo to add comments inside
  phrases (default = True).
* [01 Oct 07] Added flag E in pr_r.cmo and pr_o.cmo to ask to equilibrate
  cases in 'match', 'if', 'parse', 'EXTEND' statements, i.e if one case does
  not fit on the line, all cases must be cut (default = False).
* [01 Oct 07] Added module "Diff" in the library (general comparison of
  two arrays). Implemented with the same algorithm as the Unix 'diff'
  command.
* [01 Oct 07] Fixed bug in pa_o.cmo (normal syntax) introduced in version
  5.00. The example: "function Atom atext as cur :: tl' -> 0" did not
  parse, printing the error "incorrect alias pattern".

Camlp5 Version 5.00:
---------------------

* In Camlp5 compiled distributions, there are now two modes. If one wants
  to compile Camlp5, the 'configure' script can select the mode:

  The two modes are:

  - transitional mode: the syntax tree is compatible with the previous
    version; users don't have to change their programs, but in the
    syntax tree quotations introduced by the new parsing kit
    'q_ast.cmo', the antiquotations are not available.

  - strict mode: the syntax tree is not compatible with the previous
    version. The user programs may compile without change, but may
    not.  It depends on the fact that these programs use the syntax
    tree with their constructors forms instead of their quotation
    forms. There is a new feature: the syntax tree quotations in user